fixed navigation menu showing double spacing on one item

--- a/resources/css/master.css
+++ b/resources/css/master.css
@@ -63,7 +63,7 @@ i:hover{
   display: block;
   width: 100%;
   position: relative;
-  margin-top: 15%;
+  margin-top: 1.5em;
 }
 
 
@@ -168,12 +168,13 @@ h1::before{
   top: -10px;
 }
 
-.main{
+.contactinfo{
   display: flex;
-  width: 100%;
+  width: 100vw;
   justify-content: center;
   align-items: center;
   height: 75vh;
+  flex-direction: column;
 }
 
 /* contact page*/
